Fixed menu bar wraparound problem

--- a/org/inc/styles.css
+++ b/org/inc/styles.css
@@ -74,7 +74,7 @@ body{ background:url(../images/bg-body.jpg) repeat-x; }
 	text-decoration:none;
 	padding:10px 0 7px 0px;
 	display:block;
-	margin-right:30px;
+	margin-right:25px;
 }
 #nav ul li.last a { margin-right:0; }
 #nav ul li a:hover { color:#a0a0a0; text-decoration:underline; }
